# bird-nix

./: .gitignore  AGENTS.md  flake.nix
blackhole/: DREAM.md  test-plan.md
demos/: default.nix  flake.nix
playground/: .gitignore  Cargo.toml  Trunk.toml  bird-data.nix  flake.nix  index.html
playground/.config/: nextest.toml
playground/demos/: b-bluebird-compose.nix  b-f-i-f.nix  b-i-f-f.nix  bird-speech.nix  birds-as-data.nix  c-cardinal-flip.nix  c-k-ki.nix  chemical-reaction-graph.nix  church-booleans.nix  church-numerals.nix  church-pairs-vireo.nix  complete-graph.nix  compose-transforms.nix  cycle-graph.nix  full-library.nix  grid-graph.nix  hpc-cluster-topology.nix  hub-rule.nix  i-identity.nix  import-birds-nix.nix  k-kestrel.nix  ki-kite.nix  l-lark.nix  m-i-i.nix  m-mockingbird.nix  manifest.json  map-with-combinators.nix  neural-network-layers.nix  path-graph.nix  pipeline-with-b.nix  protein-interaction-network.nix  quantum-circuit.nix  recursive-factorial-y.nix  reverse-edges.nix  s-k-k-i.nix  s-starling-fork.nix  social-network.nix  star-graph.nix  subdivide-edge.nix  toroidal-mesh.nix  (+5 more)
playground/src/: lib.rs
src/: _test_demo.nix  ast.nix  bird-compiler.nix  bird-dsl.nix  bird-format.nix  bird-nix.nix  bird-pbt.nix  bird-toolchain.nix  birds-speech.nix  birds.nix  default.nix  gc-min.nix  graph-combinators.nix  graph.nix  real-world-birds.nix  test-harness.nix
tests/: bird-pbt.nix  default.nix  real-world-birds.nix  run-all.nix  test-birds.nix  test-compiler.nix  test-gcl-demos.nix  test-graph.nix  test-harness.nix  test-kernel.nix  test-pbt.nix
(+10 files in other folders)
